# uzs-scripts

./: .gitignore  LICENSE  README.md  pyproject.toml
files/: ngram_predictor.pkl
lutfiy/: __init__.py  api.py  ngram_zwnj.py  transliterate.py
