[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lutfiy"
version = "0.0.2"
authors = [
    { name="Muhammadsaid Mamasaidov", email="mukhammadsaid.mamasaidov@gmail.com" },
    { name="Abror Shopulatov", email="murodbeck@proton.me" },
]
maintainers = [
    { name="Muhammadsaid Mamasaidov", email="mukhammadsaid.mamasaidov@gmail.com" },
    { name="Abror Shopulatov", email="murodbeck@proton.me" },
]
license = {file = "LICENSE"}
keywords = ["language", "uzs", "transliteration", "zwnj"]
description = "lutfiy - transliteration and zwnj scripts for Southern Uzbek"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Topic :: Text Processing :: Linguistic"
]

[project.urls]
"Homepage" = "https://github.com/tahrirchi/uzs-scripts"
"Bug Tracker" = "https://github.com/tahrirchi/uzs-scripts/issues"

[tool.hatch.build.targets.wheel]
packages = ["lutfiy"]

[tool.setuptools.package-data]
lutfiy = ["files/*.pkl"]